@@ -1,2 +1,0 @@
-dist_bin_SCRIPTS = \
-	stopmpifxcorr
